// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots containers/World/RoutesMapDetailsContainer Customized 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 28.985507246376812,
      },
      Object {
        "backgroundColor": "#ededed",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FAFAFA",
          "height": "100%",
          "paddingHorizontal": 28.985507246376812,
          "width": "100%",
        },
        Object {
          "borderColor": "#C63733",
          "borderWidth": 1,
        },
      ]
    }
    testID="route-map-details-container"
  >
    <View
      style={
        Object {
          "paddingBottom": 25.28909952606635,
        }
      }
      testID="route-map-details-container-prolog-description-row1"
    >
      <Text
        adjustsFontSizeToFit={false}
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "DIN2014-Demi",
              "fontSize": 20,
              "fontWeight": "600",
              "lineHeight": 24,
              "textAlign": "left",
            },
            undefined,
          ]
        }
        testID="header2-test-id"
      >
        Trasa 1 z dnia 18/02/2022
      </Text>
      <Text
        adjustsFontSizeToFit={false}
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "DIN2014-Demi",
              "fontSize": 20,
              "fontWeight": "600",
              "lineHeight": 24,
              "textAlign": "left",
            },
            undefined,
          ]
        }
        testID="header2-test-id"
      >
        1,18
        km - 
        0h 17m
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 31.61137440758294,
        }
      }
      testID="route-map-details-container-prolog-description-row2"
    >
      <Text
        adjustsFontSizeToFit={false}
        style={
          Array [
            Object {
              "color": "#717171",
              "fontFamily": "DIN2014-Regular",
              "fontSize": 16,
              "lineHeight": 16,
              "textAlign": "left",
            },
            undefined,
          ]
        }
        testID="body-secondary-test-id"
      >
        0,01 RoutesDetails.details.distanceToStart
      </Text>
      <Text
        adjustsFontSizeToFit={false}
        style={
          Array [
            Object {
              "color": "#717171",
              "fontFamily": "DIN2014-Regular",
              "fontSize": 16,
              "lineHeight": 16,
              "textAlign": "left",
            },
            undefined,
          ]
        }
        testID="body-secondary-test-id"
      >
        Łatwa
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": 31.61137440758294,
          },
          Object {
            "alignItems": "center",
            "justifyContent": "flex-start",
          },
        ]
      }
      testID="route-map-details-container-prolog-description-row3"
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "mykross",
              "textAlign": "center",
            },
            Object {
              "color": "#333333",
              "fontSize": 20,
            },
            Object {
              "marginRight": 15.384615384615385,
            },
          ]
        }
        testID="text-icon-test-id"
      >
        I
      </Text>
      <Text
        adjustsFontSizeToFit={false}
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "DIN2014-Demi",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
            },
            undefined,
          ]
        }
        testID="route-map-details-container-prolog-description-row3-likes"
      >
        0
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
      testID="route-map-details-container-common-action-buttons"
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 30.76923076923077,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "width": "100%",
            },
            Object {
              "elevation": 5,
              "shadowColor": "#333333",
              "shadowOffset": Object {
                "height": 0,
                "width": 7.6923076923076925,
              },
              "shadowOpacity": 0.07,
              "shadowRadius": 15.384615384615385,
            },
            Array [
              Object {
                "height": 92.3076923076923,
                "width": 565.3846153846154,
              },
              Object {
                "height": 75.86729857819905,
                "width": 290.3846153846154,
              },
            ],
          ]
        }
        testID="route-map-details-container-common-action-buttons-primary-button"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 30.76923076923077,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "center",
                "width": "100%",
              },
              Object {
                "backgroundColor": "#C63733",
              },
              undefined,
            ]
          }
          testID="route-map-details-container-common-action-buttons-primary-button-container"
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "mykross",
                  "textAlign": "center",
                },
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 20,
                },
                Object {
                  "marginRight": 15.384615384615385,
                },
              ]
            }
            testID="route-map-details-container-common-action-buttons-primary-button-icon"
          >
            G
          </Text>
          <Text
            adjustsFontSizeToFit={true}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 18,
                  "lineHeight": 28,
                  "textAlign": "left",
                },
                Object {
                  "color": "#FFFFFF",
                },
              ]
            }
            testID="route-map-details-container-common-action-buttons-primary-button-text"
          >
            RoutesDetails.details.actionButtons.published.primaryAction
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 30.76923076923077,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "width": "100%",
            },
            Object {
              "elevation": 5,
              "shadowColor": "#333333",
              "shadowOffset": Object {
                "height": 0,
                "width": 7.6923076923076925,
              },
              "shadowOpacity": 0.07,
              "shadowRadius": 15.384615384615385,
            },
            Array [
              Object {
                "height": 92.3076923076923,
                "width": 565.3846153846154,
              },
              Object {
                "height": 75.86729857819905,
                "width": 275,
              },
            ],
          ]
        }
        testID="route-map-details-container-common-action-buttons-secondary-button"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 30.76923076923077,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "center",
                "width": "100%",
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
              undefined,
            ]
          }
          testID="route-map-details-container-common-action-buttons-secondary-button-container"
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "mykross",
                  "textAlign": "center",
                },
                Object {
                  "color": "#C63733",
                  "fontSize": 20,
                },
                Object {
                  "marginRight": 15.384615384615385,
                },
              ]
            }
            testID="route-map-details-container-common-action-buttons-secondary-button-icon"
          >
            S
          </Text>
          <Text
            adjustsFontSizeToFit={true}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 18,
                  "lineHeight": 28,
                  "textAlign": "left",
                },
                Object {
                  "color": "#C63733",
                },
              ]
            }
            testID="route-map-details-container-common-action-buttons-secondary-button-text"
          >
            RoutesDetails.details.actionButtons.published.secondaryAction
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="route-map-details-container-common-action-buttons-icon-button"
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 30.76923076923077,
                "height": 84.61538461538461,
                "justifyContent": "center",
                "width": 84.61538461538461,
              },
              Object {
                "height": 75.86729857819905,
                "width": 92.3076923076923,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "mykross",
                  "textAlign": "center",
                },
                Object {
                  "color": "#C63733",
                  "fontSize": 24,
                },
                undefined,
              ]
            }
            testID="route-map-details-container-common-action-buttons-icon-button-icon"
          >
            V
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "marginTop": 37.93364928909953,
          },
          Object {
            "paddingBottom": 37.93364928909953,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "paddingBottom": 37.93364928909953,
          }
        }
      >
        <View
          style={
            Object {
              "paddingBottom": 37.93364928909953,
            }
          }
        >
          <Text
            adjustsFontSizeToFit={false}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 24,
                  "textAlign": "left",
                },
                undefined,
              ]
            }
            testID="header3-test-id"
          >
            RoutesDetails.details.descriptionTitle
          </Text>
          <Text
            adjustsFontSizeToFit={false}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                  "textAlign": "left",
                },
                undefined,
              ]
            }
            testID="paragraph-test-id"
          >
            Ar
          </Text>
        </View>
        <Text
          adjustsFontSizeToFit={false}
          style={
            Array [
              Object {
                "color": "#333333",
                "fontFamily": "DIN2014-Regular",
                "fontSize": 16,
                "lineHeight": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="paragraph-test-id"
        >
          Szutrowa
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 37.93364928909953,
          }
        }
      >
        <Text
          adjustsFontSizeToFit={false}
          style={
            Array [
              Object {
                "color": "#333333",
                "fontFamily": "DIN2014-Demi",
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 24,
                "textAlign": "left",
              },
              Object {
                "paddingBottom": 25.28909952606635,
              },
            ]
          }
          testID="header3-test-id"
        >
          RoutesDetails.details.tagsTitle
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "flexWrap": "wrap",
              },
              undefined,
            ]
          }
          testID="tags-world-test-id"
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 30.76923076923077,
                "marginBottom": 12.644549763033176,
                "marginRight": 15.384615384615385,
                "paddingHorizontal": 30.76923076923077,
                "paddingVertical": 15.384615384615385,
              }
            }
            testID="tags-world-test-id-tags-element"
          >
            <Text
              adjustsFontSizeToFit={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "DIN2014-Demi",
                    "fontSize": 16,
                    "lineHeight": 24,
                    "textAlign": "left",
                  },
                  undefined,
                ]
              }
              testID="body-primary-test-id"
            >
              widokowa
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 30.76923076923077,
                "marginBottom": 12.644549763033176,
                "marginRight": 15.384615384615385,
                "paddingHorizontal": 30.76923076923077,
                "paddingVertical": 15.384615384615385,
              }
            }
            testID="tags-world-test-id-tags-element"
          >
            <Text
              adjustsFontSizeToFit={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "DIN2014-Demi",
                    "fontSize": 16,
                    "lineHeight": 24,
                    "textAlign": "left",
                  },
                  undefined,
                ]
              }
              testID="body-primary-test-id"
            >
              weekendowa
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 30.76923076923077,
                "marginBottom": 12.644549763033176,
                "marginRight": 15.384615384615385,
                "paddingHorizontal": 30.76923076923077,
                "paddingVertical": 15.384615384615385,
              }
            }
            testID="tags-world-test-id-tags-element"
          >
            <Text
              adjustsFontSizeToFit={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "DIN2014-Demi",
                    "fontSize": 16,
                    "lineHeight": 24,
                    "textAlign": "left",
                  },
                  undefined,
                ]
              }
              testID="body-primary-test-id"
            >
              trekkingowa
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "width": "100%",
          }
        }
      >
        <Text
          adjustsFontSizeToFit={false}
          style={
            Array [
              Object {
                "color": "#717171",
                "fontFamily": "DIN2014-Regular",
                "fontSize": 14,
                "lineHeight": 16,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="subtitle-test-id"
        >
          RoutesDetails.details.author
          : 
          Rowerzysta
          , 
          RoutesDetails.details.creationPrefix
          :
           
          18.02.2022, 15:52:02
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots containers/World/RoutesMapDetailsContainer Default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 28.985507246376812,
      },
      Object {
        "backgroundColor": "#ededed",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FAFAFA",
          "height": "100%",
          "paddingHorizontal": 28.985507246376812,
          "width": "100%",
        },
        undefined,
      ]
    }
    testID="route-map-details-container"
  >
    <View
      style={
        Object {
          "paddingBottom": 25.28909952606635,
        }
      }
      testID="route-map-details-container-prolog-description-row1"
    >
      <Text
        adjustsFontSizeToFit={false}
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "DIN2014-Demi",
              "fontSize": 20,
              "fontWeight": "600",
              "lineHeight": 24,
              "textAlign": "left",
            },
            undefined,
          ]
        }
        testID="header2-test-id"
      >
        Trasa 1 z dnia 18/02/2022
      </Text>
      <Text
        adjustsFontSizeToFit={false}
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "DIN2014-Demi",
              "fontSize": 20,
              "fontWeight": "600",
              "lineHeight": 24,
              "textAlign": "left",
            },
            undefined,
          ]
        }
        testID="header2-test-id"
      >
        1,18
        km - 
        0h 17m
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 31.61137440758294,
        }
      }
      testID="route-map-details-container-prolog-description-row2"
    >
      <Text
        adjustsFontSizeToFit={false}
        style={
          Array [
            Object {
              "color": "#717171",
              "fontFamily": "DIN2014-Regular",
              "fontSize": 16,
              "lineHeight": 16,
              "textAlign": "left",
            },
            undefined,
          ]
        }
        testID="body-secondary-test-id"
      >
        0,01 RoutesDetails.details.distanceToStart
      </Text>
      <Text
        adjustsFontSizeToFit={false}
        style={
          Array [
            Object {
              "color": "#717171",
              "fontFamily": "DIN2014-Regular",
              "fontSize": 16,
              "lineHeight": 16,
              "textAlign": "left",
            },
            undefined,
          ]
        }
        testID="body-secondary-test-id"
      >
        Łatwa
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": 31.61137440758294,
          },
          Object {
            "alignItems": "center",
            "justifyContent": "flex-start",
          },
        ]
      }
      testID="route-map-details-container-prolog-description-row3"
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "mykross",
              "textAlign": "center",
            },
            Object {
              "color": "#333333",
              "fontSize": 20,
            },
            Object {
              "marginRight": 15.384615384615385,
            },
          ]
        }
        testID="text-icon-test-id"
      >
        I
      </Text>
      <Text
        adjustsFontSizeToFit={false}
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "DIN2014-Demi",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
            },
            undefined,
          ]
        }
        testID="route-map-details-container-prolog-description-row3-likes"
      >
        0
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
      testID="route-map-details-container-common-action-buttons"
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 30.76923076923077,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "width": "100%",
            },
            Object {
              "elevation": 5,
              "shadowColor": "#333333",
              "shadowOffset": Object {
                "height": 0,
                "width": 7.6923076923076925,
              },
              "shadowOpacity": 0.07,
              "shadowRadius": 15.384615384615385,
            },
            Array [
              Object {
                "height": 92.3076923076923,
                "width": 565.3846153846154,
              },
              Object {
                "height": 75.86729857819905,
                "width": 290.3846153846154,
              },
            ],
          ]
        }
        testID="route-map-details-container-common-action-buttons-primary-button"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 30.76923076923077,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "center",
                "width": "100%",
              },
              Object {
                "backgroundColor": "#C63733",
              },
              undefined,
            ]
          }
          testID="route-map-details-container-common-action-buttons-primary-button-container"
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "mykross",
                  "textAlign": "center",
                },
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 20,
                },
                Object {
                  "marginRight": 15.384615384615385,
                },
              ]
            }
            testID="route-map-details-container-common-action-buttons-primary-button-icon"
          >
            G
          </Text>
          <Text
            adjustsFontSizeToFit={true}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 18,
                  "lineHeight": 28,
                  "textAlign": "left",
                },
                Object {
                  "color": "#FFFFFF",
                },
              ]
            }
            testID="route-map-details-container-common-action-buttons-primary-button-text"
          >
            RoutesDetails.details.actionButtons.published.primaryAction
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 30.76923076923077,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "width": "100%",
            },
            Object {
              "elevation": 5,
              "shadowColor": "#333333",
              "shadowOffset": Object {
                "height": 0,
                "width": 7.6923076923076925,
              },
              "shadowOpacity": 0.07,
              "shadowRadius": 15.384615384615385,
            },
            Array [
              Object {
                "height": 92.3076923076923,
                "width": 565.3846153846154,
              },
              Object {
                "height": 75.86729857819905,
                "width": 275,
              },
            ],
          ]
        }
        testID="route-map-details-container-common-action-buttons-secondary-button"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 30.76923076923077,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "center",
                "width": "100%",
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
              undefined,
            ]
          }
          testID="route-map-details-container-common-action-buttons-secondary-button-container"
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "mykross",
                  "textAlign": "center",
                },
                Object {
                  "color": "#C63733",
                  "fontSize": 20,
                },
                Object {
                  "marginRight": 15.384615384615385,
                },
              ]
            }
            testID="route-map-details-container-common-action-buttons-secondary-button-icon"
          >
            S
          </Text>
          <Text
            adjustsFontSizeToFit={true}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 18,
                  "lineHeight": 28,
                  "textAlign": "left",
                },
                Object {
                  "color": "#C63733",
                },
              ]
            }
            testID="route-map-details-container-common-action-buttons-secondary-button-text"
          >
            RoutesDetails.details.actionButtons.published.secondaryAction
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="route-map-details-container-common-action-buttons-icon-button"
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 30.76923076923077,
                "height": 84.61538461538461,
                "justifyContent": "center",
                "width": 84.61538461538461,
              },
              Object {
                "height": 75.86729857819905,
                "width": 92.3076923076923,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "mykross",
                  "textAlign": "center",
                },
                Object {
                  "color": "#C63733",
                  "fontSize": 24,
                },
                undefined,
              ]
            }
            testID="route-map-details-container-common-action-buttons-icon-button-icon"
          >
            V
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "marginTop": 37.93364928909953,
          },
          Object {
            "paddingBottom": 37.93364928909953,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "paddingBottom": 37.93364928909953,
          }
        }
      >
        <View
          style={
            Object {
              "paddingBottom": 37.93364928909953,
            }
          }
        >
          <Text
            adjustsFontSizeToFit={false}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 24,
                  "textAlign": "left",
                },
                undefined,
              ]
            }
            testID="header3-test-id"
          >
            RoutesDetails.details.descriptionTitle
          </Text>
          <Text
            adjustsFontSizeToFit={false}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                  "textAlign": "left",
                },
                undefined,
              ]
            }
            testID="paragraph-test-id"
          >
            Ar
          </Text>
        </View>
        <Text
          adjustsFontSizeToFit={false}
          style={
            Array [
              Object {
                "color": "#333333",
                "fontFamily": "DIN2014-Regular",
                "fontSize": 16,
                "lineHeight": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="paragraph-test-id"
        >
          Szutrowa
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 37.93364928909953,
          }
        }
      >
        <Text
          adjustsFontSizeToFit={false}
          style={
            Array [
              Object {
                "color": "#333333",
                "fontFamily": "DIN2014-Demi",
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 24,
                "textAlign": "left",
              },
              Object {
                "paddingBottom": 25.28909952606635,
              },
            ]
          }
          testID="header3-test-id"
        >
          RoutesDetails.details.tagsTitle
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "flexWrap": "wrap",
              },
              undefined,
            ]
          }
          testID="tags-world-test-id"
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 30.76923076923077,
                "marginBottom": 12.644549763033176,
                "marginRight": 15.384615384615385,
                "paddingHorizontal": 30.76923076923077,
                "paddingVertical": 15.384615384615385,
              }
            }
            testID="tags-world-test-id-tags-element"
          >
            <Text
              adjustsFontSizeToFit={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "DIN2014-Demi",
                    "fontSize": 16,
                    "lineHeight": 24,
                    "textAlign": "left",
                  },
                  undefined,
                ]
              }
              testID="body-primary-test-id"
            >
              widokowa
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 30.76923076923077,
                "marginBottom": 12.644549763033176,
                "marginRight": 15.384615384615385,
                "paddingHorizontal": 30.76923076923077,
                "paddingVertical": 15.384615384615385,
              }
            }
            testID="tags-world-test-id-tags-element"
          >
            <Text
              adjustsFontSizeToFit={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "DIN2014-Demi",
                    "fontSize": 16,
                    "lineHeight": 24,
                    "textAlign": "left",
                  },
                  undefined,
                ]
              }
              testID="body-primary-test-id"
            >
              weekendowa
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 30.76923076923077,
                "marginBottom": 12.644549763033176,
                "marginRight": 15.384615384615385,
                "paddingHorizontal": 30.76923076923077,
                "paddingVertical": 15.384615384615385,
              }
            }
            testID="tags-world-test-id-tags-element"
          >
            <Text
              adjustsFontSizeToFit={false}
              style={
                Array [
                  Object {
                    "color": "#333333",
                    "fontFamily": "DIN2014-Demi",
                    "fontSize": 16,
                    "lineHeight": 24,
                    "textAlign": "left",
                  },
                  undefined,
                ]
              }
              testID="body-primary-test-id"
            >
              trekkingowa
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "width": "100%",
          }
        }
      >
        <Text
          adjustsFontSizeToFit={false}
          style={
            Array [
              Object {
                "color": "#717171",
                "fontFamily": "DIN2014-Regular",
                "fontSize": 14,
                "lineHeight": 16,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="subtitle-test-id"
        >
          RoutesDetails.details.author
          : 
          Rowerzysta
          , 
          RoutesDetails.details.creationPrefix
          :
           
          18.02.2022, 15:52:02
        </Text>
      </View>
    </View>
  </View>
</View>
`;
